<resources>
    <string name="app_name">Collections and Maps</string>
    <string name="maps">Maps</string>
    <string name="askTextView">Введите размер коллекции!</string>
    <string name="calcButtonStart">Расчитать!</string>
    <string name="calcButtonStop">Остановить!</string>
    <string name="collectionSize_hint"> <font size="14">  Впишите размер!</font></string>
    <string name="ToastsText">Размер необходимо задавать только числами</string>
    <string name="OnlyNumber">Введите числовое значение.</string>
    <string name="OverZero">Значение должно быть больше нуля.</string>
    <string name="Collections">Collections</string>
    <string name="Maps">Maps</string>
    <string name="OtherValue">Введите корректное значение больше или равно 0</string>
    <string name="NeedAnyValue">Введите значение</string>

    <string name="ArrayList">ArrayList</string>
    <string name="LinkedList">LinkedList</string>
...
    <string name="search_key">search by key</string>
    <string name="removing">removing</string>

    <string name="empty">""</string>
    <integer name="no_result">-1</integer>
    <string name="timing">%s millis</string>
    <string name="empty_input_value">Введите значение размера массива</string>
</resources>

