package com.example.collections_and_maps.ui.benchmark.ui;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.hasDescendant;
import static androidx.test.espresso.matcher.ViewMatchers.isClickable;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isFocusable;
import static androidx.test.espresso.matcher.ViewMatchers.withAlpha;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withSubstring;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

import androidx.test.core.app.ApplicationProvider;
import androidx.test.espresso.Espresso;
import androidx.test.espresso.ViewInteraction;
import androidx.test.espresso.action.ViewActions;
import androidx.test.espresso.contrib.RecyclerViewActions;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.ext.junit.runners.AndroidJUnit4;

import com.example.collections_and_maps.App;
import com.example.collections_and_maps.R;
import com.example.collections_and_maps.models.AppComponent;
import com.example.collections_and_maps.models.DaggerAppComponent;
import com.example.collections_and_maps.models.benchmarks.CollectionsBenchmark;
import com.example.collections_and_maps.models.benchmarks.MapsBenchmark;
import com.example.collections_and_maps.models.benchmarks.ResultItem;
import com.example.collections_and_maps.ui.benchmark.BenchmarkRule;
import com.example.collections_and_maps.ui.benchmark.models.AppModuleTest;
import com.example.collections_and_maps.ui.benchmark.models.benchmarks.CollectionsBenchmarkTest;
import com.example.collections_and_maps.ui.benchmark.models.benchmarks.MapsBenchmarkTest;

import org.hamcrest.Matchers;
import org.junit.BeforeClass;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.util.List;

@RunWith(AndroidJUnit4.class)
//@LargeTest
public class BenchmarkFragmentTest extends BenchmarkRule {

    @BeforeClass
    public static void set() {
        AppComponent appComponent =
                DaggerAppComponent.builder().appModule(new AppModuleTest()).build();
        App.getInstance().setAppComponent(appComponent);
    }
    @Test
    public void test_onCollectionFragment_byDefault() {
        List<ResultItem> collectionList = new CollectionsBenchmark().getItemsList(false);

        int i = 0;
        for (ResultItem item : collectionList) {
            if (item.isHeader()) {
                onView(withId(R.id.recyclerLayoutItems))
                        .perform(RecyclerViewActions.scrollToPosition(i))
                        .check(matches(AtPositionMatcher.atPosition(i, hasDescendant(withText(item.nameForHeader)))));
            } else {
                onView(withId(R.id.recyclerLayoutItems))
                        .perform(RecyclerViewActions.scrollToPosition(i))
                        .check(matches(AtPositionMatcher.atPosition(i, hasDescendant(withText("")))));
            }
            i++;
        }
    }

    @Test
    public void test_onMapFragment_byDefault() {
        onView(withId(R.id.view_pager2)).perform(ViewActions.swipeLeft());
        try {
            Thread.sleep(500);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        List<ResultItem> mapsList = new MapsBenchmark().getItemsList(false);

        int y = 0;
        for (ResultItem item : mapsList) {
            if (item.isHeader()) {
                onView(withId(R.id.recyclerLayoutItems))
                        .check(matches(AtPositionMatcher.atPosition(y, hasDescendant(withText(item.nameForHeader)))));
            } else {
                onView(withId(R.id.recyclerLayoutItems))
                        .check(matches(AtPositionMatcher.atPosition(y, hasDescendant(withText("")))));
            }
            y++;
        }
    }

    @Test
    public void test_editText() {
        ViewInteraction inputField = onView(withId(R.id.inputField));
        inputField.check(matches(Matchers.allOf(isDisplayed(), isFocusable())));
        inputField.perform(ViewActions.typeText("1000"));
    }

    @Test
    public void test_button() {
        ViewInteraction calcButton = onView(withId(R.id.calcButton));
        calcButton.check(matches(Matchers.allOf(isDisplayed(), isClickable())));
        calcButton.perform(ViewActions.click())
                .check(matches(Matchers
                        .anyOf(withText(R.string.calcButtonStart), withText(R.string.calcButtonStop))));
        Espresso.closeSoftKeyboard();
    }


    @Test
    public void test_onFragments_inputNothing() {

        String errorMessage = ApplicationProvider.getApplicationContext()
                .getString(R.string.empty_input_value);

        for (int fragment : fragments) {
            onView(withContentDescription(fragment)).perform(ViewActions.click());
            onView(withId(R.id.inputField)).perform(ViewActions.typeText(""));
            onView(withId(R.id.calcButton)).perform(ViewActions.click());
            onView(withId(R.id.inputField)).check(matches(ViewMatchers.hasErrorText(errorMessage)));
        }
    }

    @Test
    public void test_onFragments_inputZero() {

        String errorMessage = ApplicationProvider.getApplicationContext()
                .getString(R.string.OverZero);

        for (int fragment : fragments) {
            onView(withContentDescription(fragment)).perform(ViewActions.click());
            onView(withId(R.id.inputField)).perform(ViewActions.typeText("0"));
            onView(withId(R.id.calcButton)).perform(ViewActions.click());
            onView(withId(R.id.inputField)).check(matches(ViewMatchers.hasErrorText(errorMessage)));
        }
    }


    @Test
    public void test_onCollectionFragment_isVisibilityProgressBar() {
        List<ResultItem> collectionList = new CollectionsBenchmark().getItemsList(true);

        onView(withContentDescription(R.string.Collections)).perform(ViewActions.click());
        onView(withId(R.id.inputField)).perform(ViewActions.typeText("10000000"));
        onView(withId(R.id.calcButton)).perform(ViewActions.click());

        int i = 0;
        for (ResultItem item : collectionList) {
            if (!item.isHeader()) {
                onView(withId(R.id.recyclerLayoutItems))
                        .perform(RecyclerViewActions.scrollToPosition(i))
                        .check(matches(AtPositionMatcher.atPosition(i, hasDescendant(withAlpha(1.0f)))));
            }
            i++;
        }
    }

    @Test
    public void test_onMapFragment_isVisibilityProgressBar() {
        List<ResultItem> mapsList = new MapsBenchmark().getItemsList(true);

        onView(withContentDescription(R.string.Maps)).perform(ViewActions.click());
        onView(withId(R.id.inputField)).perform(ViewActions.typeText("10000000"));
        onView(withId(R.id.calcButton)).perform(ViewActions.click());

        int i = 0;
        for (ResultItem item : mapsList) {
            if (!item.isHeader()) {
                onView(withId(R.id.recyclerLayoutItems))
                        .perform(RecyclerViewActions.scrollToPosition(i))
                        .check(matches(AtPositionMatcher.atPosition(i, hasDescendant(withAlpha(1.0f)))));
            }
            i++;
        }
    }

    @Test
    public void test_onCollectionFragment_measureAction() {
        List<ResultItem> collectionList = new CollectionsBenchmarkTest().getItemsList(true);

        onView(withContentDescription(R.string.Collections)).perform(ViewActions.click());
        onView(withId(R.id.inputField)).perform(ViewActions.typeText("1000"));
        onView(withId(R.id.calcButton)).perform(ViewActions.click());

        try {
            Thread.sleep(2000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        int i = 0;
        for (ResultItem item : collectionList) {
            if (!item.isHeader()) {
                onView(withId(R.id.recyclerLayoutItems))
                        .perform(RecyclerViewActions.scrollToPosition(i))
                        .check(matches(AtPositionMatcher.atPosition(i, hasDescendant(withSubstring("1000.0")))));
            }
            i++;
        }
    }

    @Test
    public void test_onMapFragment_measureAction() {
        onView(withContentDescription(R.string.Maps)).perform(ViewActions.click());
        onView(withId(R.id.inputField)).perform(ViewActions.typeText("1000"));
        onView(withId(R.id.calcButton)).perform(ViewActions.click());

        try {
            Thread.sleep(8000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        List<ResultItem> mapsList = new MapsBenchmarkTest().getItemsList(true);

        int i = 0;
        for (ResultItem item : mapsList) {
            if (!item.isHeader()) {
                onView(withId(R.id.recyclerLayoutItems))
                        .perform(RecyclerViewActions.scrollToPosition(i))
                        .check(matches(AtPositionMatcher.atPosition(i, hasDescendant(withSubstring("1000.0")))));
            }
            i++;
        }
    }

    @Test
    public void test_onCollectionFragment_interruptMeasureAction() {
        onView(withContentDescription(R.string.Collections)).perform(ViewActions.click());
        onView(withId(R.id.inputField)).perform(ViewActions.typeText("1000"));
        onView(withId(R.id.calcButton)).perform(ViewActions.click());
        onView(withId(R.id.calcButton)).check(matches(withText(R.string.calcButtonStop)));
        try {
            Thread.sleep(10);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        onView(withId(R.id.calcButton)).perform(ViewActions.click()).check(matches(withText(R.string.calcButtonStart)));
        Espresso.closeSoftKeyboard();

    }

    @Test
    public void test_onMapFragment_interruptMeasureAction() {
        onView(withContentDescription(R.string.Maps)).perform(ViewActions.click());
        onView(withId(R.id.inputField)).perform(ViewActions.typeText("1000"));
        onView(withId(R.id.calcButton)).perform(ViewActions.click());
        onView(withId(R.id.calcButton)).check(matches(withText(R.string.calcButtonStop)));
        try {
            Thread.sleep(10);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        onView(withId(R.id.calcButton)).perform(ViewActions.click()).check(matches(withText(R.string.calcButtonStart)));
        Espresso.closeSoftKeyboard();
    }

}


